# rust-sdk-mongodb-extension

./: .cursorrules  .dockerignore  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: e2e.yml  miri.yml
e2e-tests/: Dockerfile  README.md  docker-compose.yml  run-all-checks-docker.sh  run-e2e.sh  run-fuzz-e2e.sh  run-miri-docker.sh  run-sdk-tests-docker.sh
e2e-tests/e2e-extension/: Cargo.toml
e2e-tests/e2e-extension/src/: lib.rs
e2e-tests/mongo-extension-fuzz/: Cargo.toml
e2e-tests/mongo-extension-fuzz/src/: main.rs
e2e-tests/scripts/: aggregate_e2e.js  data_federation_e2e.js  fibonacci_source_e2e.js
examples/: README.md
examples/data-federation/: Dockerfile  README.md  docker-compose.yml  run-demo.sh
examples/data-federation/data-federation-extension/: Cargo.toml
examples/data-federation/data-federation-extension/src/: lib.rs
examples/data-federation/fixtures/: events.jsonl  sample.ndjson
examples/data-federation/fixtures/nested/: stage_params.jsonl
examples/data-federation/scripts/: demo.js
examples/fibonacci/: Dockerfile  README.md  docker-compose.yml  run-demo.sh
examples/fibonacci/fibonacci-extension/: Cargo.toml
examples/fibonacci/fibonacci-extension/src/: lib.rs
examples/fibonacci/scripts/: demo.js
examples/http-fetch/: Dockerfile  README.md  docker-compose.yml  run-demo.sh
examples/http-fetch/http-fetch-extension/: Cargo.toml
examples/http-fetch/http-fetch-extension/src/: lib.rs
examples/http-fetch/scripts/: demo.js
extension-sdk-mongodb/: Cargo.toml
extension-sdk-mongodb/src/: blocking_stage.rs  byte_buf.rs  error.rs  expansion.rs  extension_log.rs  host.rs  lib.rs  map_transform.rs  operation_metrics.rs  panics.rs  passthrough.rs  source_stage.rs  stage_context.rs  stage_model.rs  stage_output.rs  stage_properties.rs  status.rs  transform_stage.rs  version.rs
extension-sdk-mongodb/tests/: api_coverage.rs  error_milestone2.rs  host_extension_options_cache.rs  map_extension_entry_failures.rs  map_extension_init.rs  map_extension_register_fail.rs  passthrough_extension_init.rs  proptest_byte_buf_roundtrip.rs  stage_context_logging.rs  stage_model_core.rs  stage_output_next.rs  stage_trait_static_properties.rs  transform_stage_trait.rs
extension-sdk-mongodb/tests/common/: mod.rs
extension-sys-mongodb/: Cargo.toml
extension-sys-mongodb/src/: abi.rs  lib.rs
include/: mongodb_extension_api.h
