[workspace]
resolver = "2"
members = [
    "extension-sys-mongodb",
    "extension-sdk-mongodb",
    "e2e-tests/e2e-extension",
    "e2e-tests/mongo-extension-fuzz",
    "examples/fibonacci/fibonacci-extension",
    "examples/http-fetch/http-fetch-extension",
    "examples/data-federation/data-federation-extension",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/olexandr-havryliak/rust-sdk-mongodb-extension"
description = "Rust SDK for MongoDB Extensions (workspace: SDK crates, examples, tests)"
