[package]
name = "extension-sdk-mongodb"
version.workspace = true
edition.workspace = true
description = "Safe helpers and adapters for MongoDB server extension shared libraries"
license.workspace = true

[dependencies]
extension-sys-mongodb = { path = "../extension-sys-mongodb" }
bson = "2.15"

[dev-dependencies]
proptest = "1.5"

[lints.rust]
unsafe_code = "allow"
