[package]
name = "e2e_extension"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sample cdylib for Docker e2e tests ($rustSdkE2e + extension YAML param)"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
bson = "2.15"
extension-sdk-mongodb = { path = "../../extension-sdk-mongodb" }
serde_json = "1"
