[package]
name = "fibonacci_extension"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example cdylib: $fibonacci aggregation stage (Docker demo)"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
bson = "2.15"
extension-sdk-mongodb = { path = "../../../extension-sdk-mongodb" }
